fixed board shift on game end

--- a/css/main.css
+++ b/css/main.css
@@ -1,54 +1,52 @@
-*{
+* {
   box-sizing: border-box;
 }
 
-body{
+body {
   font-family: 'Montserrat', sans-serif;
 }
 
-h1{
-  font-family: 'Press Start 2P', sans-serif;
+h1 {
+  /* font-family: 'Press Start 2P', sans-serif; */
   font-size: 4vh;
 }
 
-#message{
+#message {
+  color: white;
+}
+
+#reset {
   display: none;
 }
 
-#reset{
-  display: none;
-}
-
-#form{
+#form {
   border: 2px solid black;
   padding: 10px;
 }
 
-#form h4{
+#form h4 {
   text-align: center;
 }
 
-body{
+section{
+  display: grid;
+}
+
+body {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-main{
+main {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-section {
-  display: grid;
-  grid-template-columns: repeat(10, 60px);
-  grid-template-rows: repeat(10, 60px);
-  align-items: center;
-}
 
-section div{
+section div {
   box-sizing: content-box;
   width: 100%;
   height: 100%;
@@ -56,4 +54,8 @@ section div{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  
 }
